<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    android:backgroundTint="#E4E4E4"
    tools:context=".ContactFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="401dp"
            android:layout_height="116dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="6dp">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="341dp"
                android:layout_height="85dp"
                android:autoSizeTextType="uniform"
                android:bufferType="spannable"
                android:text="Contact Us"
                android:textColor="#1C7503"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="366dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:contentDescription="@string/X"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:contentDescription="@string/Email"
                android:src="@android:drawable/ic_dialog_email" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:contentDescription="@string/Call"
                android:src="@android:drawable/stat_sys_phone_call" />

            <ImageButton
                android:id="@+id/imageButton69"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:backgroundTint="#E3E3E3"
                android:contentDescription="@string/buttonE"
                app:srcCompat="?attr/homeAsUpIndicator" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
