<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    tools:context=".ui.home.HomeFragment">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:backgroundTintMode="src_over"
        app:backgroundTint="#DDDBDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
        <!-- Header LinearLayout -->
        <LinearLayout
            android:layout_width="403dp"
            android:layout_height="206dp"
            android:background="#E4E4E4"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="3dp">

            <!-- Title and Icons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:background="#E4E4E4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="191dp"
                    android:layout_height="105dp"
                    android:autoSizeTextType="uniform"
                    android:bufferType="spannable"
                    android:text="@string/app_name"
                    android:textColor="#1C7503"
                    android:textSize="19sp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="15dp" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:backgroundTint="#E3E3E3"
                    android:contentDescription="@string/buttonE"
                    app:srcCompat="?attr/homeAsUpIndicator" />


            </LinearLayout>

            <!-- Subtitles -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:breakStrategy="high_quality"
                android:text="@string/Top"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="98dp"
                android:layout_height="47dp"
                android:text="The Time Now:"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="274dp"
                tools:layout_editor_absoluteY="63dp" />
        </LinearLayout>

    <!-- Buttons LinearLayout -->
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="380dp"
        android:background="#E4E4E4"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="260dp">

        <!-- ... -->

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E4E4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="193dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:backgroundTint="#1C7503"
                android:text="Zakat Calculation"
                android:textSize="18sp"
                android:typeface="serif"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="199dp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="192dp"
                android:layout_height="171dp"
                android:layout_margin="10dp"
                android:backgroundTint="#1C7503"
                android:bufferType="normal"
                android:text="Taxes Calculation"
                android:textSize="18sp"
                android:typeface="serif"
                tools:layout_editor_absoluteX="220dp"
                tools:layout_editor_absoluteY="195dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="173dp"
            android:layout_height="163dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#1C7503"
            android:text="Currency Exchange"
            android:textSize="19sp"
            android:typeface="serif" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

